Clean run of notebooks

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test steady-state heat equation"
+    "# Test Laplace equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,12 +218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dirichlet Condition 1"
+    "## Dirichlet 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,12 +261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dirichlet Condition 2"
+    "## Dirichlet 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -305,12 +305,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## von Neumann Condition"
+    "## von Neumann"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -348,12 +348,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heat Equation"
+    "# Test Heat Equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,12 +402,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dirichlet condition"
+    "## Dirichlet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -495,44 +495,6 @@
     "                     dirichlet_boundary_vertices,\n",
     "                     output_filename, mesh, dt, T)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error is 0.05694300953869292\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calc_analytical_solution(vertex):\n",
-    "    return vertex[2]\n",
-    "\n",
-    "analytical_soln = np.array([calc_analytical_solution(v) for v in test_mesh.vertices()])\n",
-    "\n",
-    "# Calculate error\n",
-    "error = np.abs(soln - analytical_soln)\n",
-    "\n",
-    "print(\"Error is\", np.linalg.norm(error))\n",
-    "\n",
-    "test_mesh.set_attribute(\"u\", soln)\n",
-    "test_mesh.set_attribute(\"error\", error)\n",
-    "test_mesh.set_attribute(\"analytical_u\", analytical_soln)\n",
-    "\n",
-    "test_mesh.write_mesh(\"meshes/heat_equation_von_neumann_result.vtk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
