Kinetic boundaries working in 3D

--- a/3D Mesh Tests.ipynb
+++ b/3D Mesh Tests.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "km: 0.23000000000000007\n",
+      "kp: 11.839878157810809\n",
+      "conc_rac: 1.111111111111111\n",
+      "conc_gfp: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from mpl_toolkits import mplot3d\n",
     "import numpy as np\n",
@@ -12,8 +23,17 @@
     "import pymesh\n",
     "import meshio\n",
     "import math as m\n",
+    "import os\n",
     "\n",
     "from mesh3d import Mesh3D\n",
+    "from boundary import Boundary\n",
+    "import parameters\n",
+    "from parameters import km, kp, conc_rac, conc_gfp\n",
+    "\n",
+    "print(\"km:\", km)\n",
+    "print(\"kp:\", kp)\n",
+    "print(\"conc_rac:\", conc_rac)\n",
+    "print(\"conc_gfp:\", conc_gfp)\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams[\"figure.figsize\"] = 12.8, 9.6"
@@ -25,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CELL_SIZE=5e-1"
+    "CELL_SIZE=3e-1"
    ]
   },
   {
@@ -171,17 +191,18 @@
     "    boundary_values = mesh.calculate_boundary_values(von_neumann_fn)\n",
     "    von_neumann_rhs = mesh.assemble_von_neumann_boundary(boundary_values)\n",
     "    \n",
-    "    # Setup dirichlet boundary conditions on RHS\n",
     "    dirichlet_rhs = np.zeros(mesh.n_vertices)\n",
-    "    boundary_values = np.array(mesh.calculate_boundary_values(dirichlet_fn))\n",
-    "    dirichlet_rhs[dirichlet_boundary_vertices] = \\\n",
-    "        boundary_values[dirichlet_boundary_vertices]\n",
+    "    if dirichlet_boundary_vertices.size > 0:\n",
+    "        # Setup dirichlet boundary conditions on RHS\n",
+    "        boundary_values = np.array(mesh.calculate_boundary_values(dirichlet_fn))\n",
+    "        dirichlet_rhs[dirichlet_boundary_vertices] = \\\n",
+    "            boundary_values[dirichlet_boundary_vertices]\n",
     "\n",
-    "    # Remove dirichlet boundary points from stiffness mat\n",
-    "    stiffness[dirichlet_boundary_vertices,:] = 0.0\n",
-    "    # And ensure matrix isn't singular\n",
-    "    for vertex in dirichlet_boundary_vertices:\n",
-    "        stiffness[vertex, vertex] = 1.0\n",
+    "        # Remove dirichlet boundary points from stiffness mat\n",
+    "        stiffness[dirichlet_boundary_vertices,:] = 0.0\n",
+    "        # And ensure matrix isn't singular\n",
+    "        for vertex in dirichlet_boundary_vertices:\n",
+    "            stiffness[vertex, vertex] = 1.0\n",
     "        \n",
     "    return dirichlet_rhs, von_neumann_rhs"
    ]
@@ -230,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.1632857603153942e-17\n"
+      "Error is 1.713255271230399e-15\n"
      ]
     }
    ],
@@ -273,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.132892344728772e-15\n"
+      "Error is 0.17498695176731208\n"
      ]
     }
    ],
@@ -317,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 0.029249456401662367\n"
+      "Error is 0.029217325309843226\n"
      ]
     }
    ],
@@ -414,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 1.4325749365178209e-15\n"
+      "Error is 3.327892358866849e-15\n"
      ]
     }
    ],
@@ -463,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error is 0.05694300953869292\n"
+      "Error is 0.05697728832053643\n"
      ]
     }
    ],
@@ -488,13 +509,113 @@
     "dt = 0.1\n",
     "T = 10.0\n",
     "\n",
-    "dirichlet_boundary_vertices = np.array([mesh.boundary_vertices[0]])\n",
+    "dirichlet_boundary_vertices = np.array([])\n",
     "\n",
     "run_heat_equation(calculate_dirichlet_values, calculate_von_neumann_values,\n",
     "                      calc_analytical_solution, calculate_initial_condition,\n",
     "                     dirichlet_boundary_vertices,\n",
     "                     output_filename, mesh, dt, T)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kinetic boundaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_simulation(mesh, membrane,\n",
+    "                   ic_fn, output_folder,\n",
+    "                   total_time=1.0, steps_per_time=50,\n",
+    "                   time_between_saves=0.1):\n",
+    "    # Work out timings\n",
+    "    total_steps = int(total_time*steps_per_time)\n",
+    "    T = total_time/parameters.T0\n",
+    "    time_between_saves /= parameters.T0\n",
+    "    dt = T/total_steps\n",
+    "#     print(\"dt:\", dt)\n",
+    "\n",
+    "    # Initial conditions\n",
+    "    u_prev = set_initial_conditions(mesh, ic_fn)\n",
+    "    \n",
+    "    # Assemble matrices\n",
+    "    stiffness = mesh.assemble_stiffness()\n",
+    "    mass = mesh.assemble_mass()\n",
+    "    \n",
+    "    # Form LHS matrix\n",
+    "    lhs_matrix = dt*stiffness + mass\n",
+    "\n",
+    "    t = 0.0\n",
+    "    save_t = 0.0\n",
+    "    saves = 0\n",
+    "    \n",
+    "    while t<T:\n",
+    "        # Write to file\n",
+    "        if t >= save_t:\n",
+    "            mesh.set_attribute(\"cytoplasm_gfp\", u_prev)\n",
+    "            mesh.set_attribute(\"bound_gfp\", membrane.bound_gfp)\n",
+    "            combined = u_prev + membrane.bound_gfp/parameters.membrane_thickness\n",
+    "            mesh.set_attribute(\"total_gfp\", combined)\n",
+    "            output_filename = output_folder + \"/\" + str(saves) + \".vtk\"\n",
+    "            mesh.write_mesh(output_filename)\n",
+    "            save_t += time_between_saves\n",
+    "            saves += 1\n",
+    "            \n",
+    "        # Calculate boundary condition\n",
+    "        boundary_values = -1*membrane.calc_ddt(u_prev)\n",
+    "        boundary_vector = mesh.assemble_von_neumann_boundary(boundary_values)\n",
+    "        \n",
+    "        # Solve FEM PDE\n",
+    "        rhs_vector = dt*boundary_vector + mass.dot(u_prev)\n",
+    "        u_next = np.linalg.solve(lhs_matrix, rhs_vector)\n",
+    "        \n",
+    "        # Update boundary ODE\n",
+    "        membrane.update(dt)\n",
+    "\n",
+    "        # Advance timestep\n",
+    "        u_prev[:] = u_next[:]\n",
+    "        t+=dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_initial_condition(vertex):\n",
+    "    return 1.0\n",
+    "\n",
+    "output_folder = \"data/kinetic_boundaries_test_1\"\n",
+    "try:\n",
+    "    os.makedirs(output_folder)\n",
+    "except FileExistsError:\n",
+    "    pass\n",
+    "\n",
+    "input_mesh = pymesh.generate_icosphere(1, (0,0,0), refinement_order=2)\n",
+    "mesh = Mesh3D(input_mesh, CELL_SIZE)\n",
+    "\n",
+    "membrane = Boundary(mesh.n_vertices, mesh.boundary_vertices, km, kp)\n",
+    "active_rac = 0.2\n",
+    "membrane.set_active_rac(conc_rac*active_rac)\n",
+    "\n",
+    "run_simulation(mesh, membrane, calculate_initial_condition, output_folder, total_time=5.0, time_between_saves=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
